# mint-pkg-switch

./: .gitignore  MAINTAINERS  Makefile.am  README.md  autogen.sh  configure.ac  pkgswitch.in
PackageSwitch/: Impl.py  Main.py  Makefile.am  util.py
PackageSwitch/distros/: Makefile.am  linuxmint.py
PackageSwitch/metapackages/: Makefile.am  cinnamon.py
debian/: changelog  control  copyright  preinst  rules
po/: POTFILES.in  en_US.po  pkgswitch.pot
